--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: your_name/repo_name
+  repo: arturogalan/example-gridsome-netlify-cms-widget-i18n
 
 media_folder: "static/uploads"
 public_folder: "/uploads"
